--- a/src/main/res/layout/activity_signup.xml
+++ b/src/main/res/layout/activity_signup.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/orange"
     android:clipChildren="false">
 
-    <!-- White Curve Background -->
+    <!-- Add whiteCurve view here -->
     <View
         android:id="@+id/whiteCurve"
         android:layout_width="match_parent"
@@ -17,7 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Logo -->
     <ImageView
         android:id="@+id/logo"
         android:layout_width="275dp"
@@ -30,55 +30,100 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Pizza Image -->
-    <ImageView
-        android:id="@+id/pizza"
-        android:layout_width="238dp"
-        android:layout_height="246dp"
-        android:layout_marginStart="-110dp"
-        android:layout_marginBottom="-60dp"
-        android:src="@drawable/pizza"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/bottom_pizza"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
     <!-- Signup Form -->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginHorizontal="32dp"
         app:layout_constraintTop_toBottomOf="@id/whiteCurve"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <EditText
-            android:id="@+id/username"
+        <!-- Email Field -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailInputLayout"
+            style="@style/RoundedTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
-            android:layout_marginBottom="16dp"
-            android:inputType="textEmailAddress"/>
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/ic_email"
+            app:endIconTint="@color/white"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/password"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/emailEditText"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:hint="Email"
+                android:textColor="@color/white"
+                android:inputType="textEmailAddress"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Password Field -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordInputLayout"
+            style="@style/RoundedTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            android:layout_marginBottom="24dp"
-            android:inputType="textPassword"/>
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
+            android:layout_marginTop="16dp">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:hint="Password"
+                android:textColor="@color/white"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Sign Up Button -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/signupConfirmButton"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="56dp"
             android:text="Sign Up"
             android:textColor="@color/white"
-            android:background="@drawable/btn_button_shape"
+            android:backgroundTint="@color/dark_orange"
             android:textSize="20sp"
-            android:backgroundTint="@color/dark_orange"/>
+            app:cornerRadius="12dp"
+            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
+            android:layout_marginTop="24dp"/>
 
-    </LinearLayout>
+        <!-- Google Sign-Up Section -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/signupConfirmButton"
+            android:layout_marginTop="32dp">
+
+            <TextView
+                android:id="@+id/tvGmailPrompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/continue_with_gmail"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageButton
+                android:id="@+id/googleSignUpButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/gmail"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:scaleType="fitCenter"
+                android:contentDescription="Signin button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
